k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: zspin
spec:
  replicas: 2
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause:
            duration: 30s
        - setWeight: 50
        - pause:
            duration: 60s
  selector:
    matchLabels:
      app: zspin
  template:
    metadata:
      labels:
        app: zspin
    spec:
      containers:
        - name: zspin
          image: YOUR_DOCKERHUB/zspin:latest
          ports:
            - containerPort: 8080
