k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zspin
spec:
  selector:
    app: zspin
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
