k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zspin
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - api.zeaz.dev
      secretName: zspin-tls
  rules:
    - host: api.zeaz.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zspin
                port:
                  number: 80
