k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: zspin
spec:
  hosts:
    - "api.zeaz.dev"
  gateways:
    - zspin-gateway
  http:
    - route:
        - destination:
            host: zspin
            port:
              number: 80
